Fix contrast error for consent cards
#7175 - Implement list consent UI

--- a/client/less/Main.less
+++ b/client/less/Main.less
@@ -189,11 +189,18 @@
 .dark-green {
     background-color: @pp-dark-green;
     border-color: @pp-dark-green;
+    color:white;
   &[disabled]{
     color: @pp-dark-gray;
     background-color: rgba(221,221,221,1); //same color as @pp-gray
     border-color: @pp-gray;
   }
+}
+
+.navy-blue {
+  background-color: @pp-navy-blue;
+  border-color: @pp-navy-blue;
+  color: white;
 }
 
 
